--- a/crates/nbx-wasm/examples/grpc-web-demo.html
+++ b/crates/nbx-wasm/examples/grpc-web-demo.html
@@ -119,6 +119,15 @@
     </div>
 
     <div class="section">
+        <h2>Submit Example Transaction</h2>
+        <div class="input-group">
+            <label for="mnemonic">Mnemonic (leave blank for test mnemonic):</label>
+            <input type="text" id="mnemonic" placeholder="dice domain inspire horse time...">
+        </div>
+        <button onclick="submitTransaction()">Build, Sign & Submit Transaction</button>
+    </div>
+
+    <div class="section">
         <h2>Check Transaction Status</h2>
         <div class="input-group">
             <label for="txId">Transaction ID:</label>
@@ -133,7 +142,21 @@
     </div>
 
     <script type="module">
-        import init, { GrpcClient } from '../pkg/nbx_wasm.js';
+        import init, {
+            GrpcClient,
+            deriveMasterKeyFromMnemonic,
+            hashPublicKey,
+            hashU64,
+            WasmTxBuilder,
+            WasmNote,
+            WasmVersion,
+            WasmName,
+            WasmDigest,
+            WasmSpendCondition,
+            WasmPkh,
+            WasmLockPrimitive,
+            WasmLockTim
+        } from '../pkg/nbx_wasm.js';
 
         let wasmReady = false;
         let client = null;
@@ -194,6 +217,67 @@
                 log('Balance result:\n' + JSON.stringify(result, null, 2), 'success');
             } catch (err) {
                 log('Error getting balance: ' + err, 'error');
+            }
+        };
+
+        window.submitTransaction = async function() {
+            if (!wasmReady) {
+                log('WASM module not ready yet', 'error');
+                return;
+            }
+
+            const endpoint = document.getElementById('endpoint').value;
+            let mnemonicInput = document.getElementById('mnemonic').value.trim();
+
+            // Use test mnemonic if none provided
+            if (!mnemonicInput) {
+                mnemonicInput = "dice domain inspire horse time initial monitor nature mass impose tone benefit vibrant dash kiss mosquito rice then color ribbon agent method drop fat";
+            }
+
+            try {
+                log('Deriving private key from mnemonic...', 'loading');
+                const masterKey = deriveMasterKeyFromMnemonic(mnemonicInput, "");
+                const privateKeyBytes = masterKey.private_key;
+                const pubkeyHashString = hashPublicKey(masterKey.public_key);
+
+                // test data; in practice this should come from getBalance
+                const note = new WasmNote(
+                    WasmVersion.V1(),
+                    13n,
+                    new WasmName(
+                        "2H7WHTE9dFXiGgx4J432DsCLuMovNkokfcnCGRg7utWGM9h13PgQvsH",
+                        "7yMzrJjkb2Xu8uURP7YB3DFcotttR8dKDXF1tSp2wJmmXUvLM7SYzvM"
+                    ),
+                    new WasmDigest(hashU64(0)),
+                    4294967296n
+                );
+                const spendCondition = new WasmSpendCondition([
+                    WasmLockPrimitive.newPkh(WasmPkh.single(pubkeyHashString)),
+                    WasmLockPrimitive.newTim(WasmLockTim.coinbase())
+                ]);
+                const recipientDigest = new WasmDigest("6psXufjYNRxffRx72w8FF9b5MYg8TEmWq2nEFkqYm51yfqsnkJu8XqX");
+                const refundDigest = new WasmDigest("6psXufjYNRxffRx72w8FF9b5MYg8TEmWq2nEFkqYm51yfqsnkJu8XqX");
+
+                const giftAmount = 1234567n;
+                const feeAmount = 2850816n;
+                const builder = WasmTxBuilder.newSimple(
+                    [note],
+                    spendCondition,
+                    recipientDigest,
+                    giftAmount,
+                    feeAmount,
+                    refundDigest
+                );
+                const rawTx = builder.sign(privateKeyBytes);
+                log('Transaction built successfully!', 'success');
+                log('Transaction ID: ' + rawTx.id.value, 'info');
+
+                client = new GrpcClient(endpoint);
+                const result = await client.send_transaction(rawTx.toProtobuf());
+                log('Transaction submitted! ' + result, 'success');
+            } catch (err) {
+                log('Error submitting transaction: ' + err, 'error');
+                console.error('Full error:', err);
             }
         };
 
